fix: body does not overflow its viewport anymore

--- a/src/app/monitoring/containers/live-logs/live-logs.component.scss
+++ b/src/app/monitoring/containers/live-logs/live-logs.component.scss
@@ -1,7 +1,8 @@
 @import '../../../core/core';
 
 .container {
-    margin-top: 3vh;
+    margin-top: 0px;
+    padding-top: 73px;
     max-width: 100vw;
 }
 .nav-container {
