--- a/src/app/monitoring/panel-configurator/container/panel-editor/panel-editor.component.scss
+++ b/src/app/monitoring/panel-configurator/container/panel-editor/panel-editor.component.scss
@@ -14,6 +14,8 @@ label{
 
 div.sb-container {
     padding: 1.5em;
+    margin-top: 0px;
+    padding-top: 73px;
     display: grid;
     grid-template-areas:
     'textfields textfields textfields textfields textfields textfields'
